<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">LAB1</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="header">中山大学学生信息系统</string>
    <string name="edit_sid">请输入学号</string>
    <string name="edit_psw">请输入密码</string>
    <string name="studentid">学号:</string>
    <string name="password">密码:</string>
    <string name="student">学生</string>
    <string name="stuff">教职工</string>
    <string name="sign_in">登录</string>
    <string name="sign_up">注册</string>
</resources>