<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="26dp" />

    <android.support.constraint.Guideline
        android:id="@+id/glv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"
        />

    <TextView android:id="@+id/header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/header"
        android:textSize="26sp"
        android:textColor="@color/RealDark"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline" />

    <ImageView android:id="@+id/imgsysu"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/sysu"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header"
        android:layout_marginTop="20dp"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <TextView android:id="@+id/studentid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/studentid"
        android:textColor="@color/RealDark"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/imgsysu"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/edit_sid"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp" />

    <EditText android:id="@+id/edit_sid"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_sid"
        android:textColor="@color/hint_graydark"
        android:textSize="18sp"
        android:inputType="number"
        app:layout_constraintTop_toBottomOf="@+id/imgsysu"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/studentid"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"/>

    <TextView android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textColor="@color/RealDark"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/edit_sid"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/edit_psw"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp"/>

    <EditText android:id="@+id/edit_psw"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_psw"
        android:textColor="@color/hint_graydark"
        android:textSize="18sp"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@+id/edit_sid"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/password"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"/>

    <RadioGroup android:id="@+id/rg1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_psw"
        android:layout_marginTop="20dp">
        <RadioButton android:id="@+id/student"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:textSize="18sp"
            android:text="@string/student"
            app:layout_constraintRight_toLeftOf="@+id/stuff"
            android:layout_marginEnd="10dp"/>
        <RadioButton android:id="@+id/stuff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/stuff"/>
    </RadioGroup>

    <Button android:id="@+id/sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:textColor="@color/RealWhite"
        android:background="@drawable/buttonfilling"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="5dp"
        app:layout_constraintRight_toLeftOf="@+id/glv"
        app:layout_constraintTop_toBottomOf="@id/rg1" />
    <Button android:id="@+id/sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textColor="@color/RealWhite"
        android:background="@drawable/buttonfilling"
        android:layout_marginTop="20dp"
        android:layout_marginStart="5dp"
        app:layout_constraintTop_toBottomOf="@id/rg1"
        app:layout_constraintLeft_toRightOf="@id/glv" />

</android.support.constraint.ConstraintLayout>